When user want to change his password, ask him for the old one before.

--- a/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/administration/form/UserPasswordUpdatePopup.html
+++ b/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/administration/form/UserPasswordUpdatePopup.html
@@ -4,6 +4,18 @@
 	<wicket:panel>
 		<div wicket:id="body">
 			<form wicket:id="form" class="form-horizontal">
+				<wicket:enclosure child="oldPassword">
+					<div class="form-group">
+						<label class="col-sm-4 control-label" wicket:for="oldPassword"><wicket:label /></label>
+						<div class="col-sm-8">
+							<div class="input-group">
+								<input class="form-control" wicket:id="oldPassword" type="password"
+										autocomplete="off" />
+								<span class="input-group-addon"><span class="fa fa-key"></span></span>
+							</div>
+						</div>
+					</div>
+				</wicket:enclosure>
 				<div class="form-group">
 					<label class="col-sm-4 control-label" wicket:for="newPassword"><wicket:label /></label>
 					<div class="col-sm-8">
